🎈 perf: 移除重复的ota接口
